// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Button render component disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM hdQNhW"
    disabled=""
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component with big size style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM bJdVlv"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component with small size style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM bEQsEO"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render ghost style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM cfhkFW"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render negative style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM gPUMpt"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM hdQNhW"
  >
    Hello world
  </button>
</DocumentFragment>
`;
